phase 2 start
